# discordbot_Thread2Channel

./: .env_example  .gitignore  Cargo.toml  README.md
src/: main.rs
