[package]
name = "discordbot_Thread2Channel"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight = { version = "0.16.0", default-features = false }
twilight-gateway = { version = "0.16.0", default-features = false, features = ["rustls-webpki-roots", "simd-json"] }
twilight-http = { version = "0.16.0", default-features = false, features = ["rustls-webpki-roots", "simd-json"] }
twilight-model = "0.16.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
