[package]
name = "discordbot_Thread2Channel"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight = { version = "0.16.0" }
twilight-gateway = { version = "0.16.0" }
twilight-http = { version = "0.16.0" }
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
