[package]
name = "discordbot_Thread2Channel"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
twilight-gateway = "0.15.3"
twilight-http = "0.15.3"
twilight-model = "0.15.3"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
